# parsim

./: .gitignore  parsim_test.ipynb  pyproject.toml  test_script.py  z_translation.txt  zsweepsim.ipynb
util/: trackpy_extraction.ipynb
