[project]
name = "parsim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deeptrack>=2.0.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "opencv-python>=4.11.0.86",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "trackpy>=0.7",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
